tests/fail/BitwiseOr.java

package fail;
import java.lang.System ;

//This program has errors and shouldn't compile.

public class BitwiseOr {
	
	public static void main (String[] args) {
			System.out.println ('Q' | 42); //Error, since j-- supports only type int BitwiseOr operation
	}
}